@@ -7,12 +7,12 @@
     <property name="dest" value="${java.io.tmpdir}/dest"/>
     <!-- just in case this ever becomes a legit url... -->
     <property name="src" value="http://iojasodjojaosdj"/>
-    <au:expectfailure expectedmessage="Task [get] failed after [${i}] attempts, giving up">
+    <au:expectfailure expectedmessage="Task [get] failed after [${i}] attempts; giving up">
       <retry retrycount="${i}">
         <get src="${src}" dest="${dest}"/>
       </retry>
     </au:expectfailure>
-    <au:assertLogContains text="Attempt [1] error occured, retrying..."/>
+    <au:assertLogContains text="Attempt [1]:  error occurred; retrying..."/>
   </target>
 
   <target name="test-success">
@@ -21,7 +21,7 @@
     <retry retrycount="${i}">
       <touch file="${dest}"/>
     </retry>
-    <au:assertLogDoesntContain text="Attempt [1] error occured, retrying..."/>
+    <au:assertLogDoesntContain text="Attempt [1]:  error occurred; retrying..."/>
   </target>
 
 </project>
